force-app/main/default/objects/Element__c/Element__c.object-meta.xml
<CustomObject>
    <label>Element</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Element Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>