force-app/main/default/objects/Element__c/fields/Element_Type__c.field-meta.xml
<CustomField>
    <fullName>Element_Type__c</fullName>
    <description>The type of element defined by the user</description>
    <label>Element Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>