force-app/main/default/objects/Element__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Elements</relationshipLabel>
    <relationshipName>Elements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>